two triangles with the right shader

--- a/GraphicsPad/GraphicsPad.vcxproj.filters
+++ b/GraphicsPad/GraphicsPad.vcxproj.filters
@@ -3,10 +3,13 @@
   <ItemGroup>
     <ClCompile Include="Mainer.cpp" />
     <ClCompile Include="MeGlWindow.cpp" />
+    <ClCompile Include="ShaderLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MeGlWindow.h" />
-    <ClInclude Include="FragmentShaderCode.glsl" />
+    <ClInclude Include="shader.shader" />
+    <ClInclude Include="Vector.h" />
+    <ClInclude Include="ShaderLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShaderCode.glsl" />
