--- a/GraphicsPad/GraphicsPad.vcxproj
+++ b/GraphicsPad/GraphicsPad.vcxproj
@@ -148,10 +148,13 @@
   <ItemGroup>
     <ClCompile Include="Mainer.cpp" />
     <ClCompile Include="MeGlWindow.cpp" />
+    <ClCompile Include="ShaderLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FragmentShaderCode.glsl" />
+    <ClInclude Include="shader.shader" />
     <ClInclude Include="MeGlWindow.h" />
+    <ClInclude Include="ShaderLoader.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShaderCode.glsl" />
