--- a/GraphicsPad/GraphicsPad.vcxproj
+++ b/GraphicsPad/GraphicsPad.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="CubeShader.shader" />
     <ClInclude Include="MeGlWindow.h" />
     <ClInclude Include="Primitives\ShapeData.h" />
+    <ClInclude Include="Primitives\TeapotData.h" />
     <ClInclude Include="Primitives\Vertex.h" />
     <ClInclude Include="Primitives\ShapeGenerator.h" />
     <ClInclude Include="ShaderLoader.h" />
