--- a/GraphicsPad/GraphicsPad.vcxproj.filters
+++ b/GraphicsPad/GraphicsPad.vcxproj.filters
@@ -15,5 +15,6 @@
     <ClInclude Include="Primitives\ShapeGenerator.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Primitives\TeapotData.h" />
   </ItemGroup>
 </Project>
