--- a/GraphicsPad/GraphicsPad.vcxproj.filters
+++ b/GraphicsPad/GraphicsPad.vcxproj.filters
@@ -17,4 +17,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Primitives\TeapotData.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Passthrough.shader" />
+  </ItemGroup>
 </Project>
