--- a/GraphicsPad/GraphicsPad.vcxproj.filters
+++ b/GraphicsPad/GraphicsPad.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Primitives\TeapotData.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Passthrough.shader" />
